# mydramalist-api

./: Cargo.toml  README.md
src/: docs.rs  error.rs  extractors.rs  handlers.rs  lib.rs  main.rs
src/models/: cast.rs  details.rs  episodes.rs  mod.rs  pagination.rs  person.rs  photos.rs  recommendations.rs  results.rs  reviews.rs  search_enums.rs  search_query.rs  statistics.rs
src/services/: mdl_url.rs  mod.rs  parser.rs  scraper.rs
src/services/parser/: cast.rs  details.rs  episodes.rs  person.rs  photos.rs  recommendations.rs  reviews.rs  search.rs  statistics.rs  utils.rs
tests/: mod.rs
tests/fixtures/: details.html  person.html
tests/parser/: mod.rs  person.rs  title_details.rs
