[package]
name = "mydramalist-api"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.102"
axum = { version = "0.8.8", features = ["macros"] }
moka = { version = "0.12.13", features = ["future"] }
regex = "1.12.3"
reqwest = "0.13.2"
scraper = "0.25.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
strum = { version = "0.27.2", features = ["derive"] }
tokio = { version = "1.49.0", features = ["full"] }
tracing = "0.1.44"
tracing-subscriber = "0.3.22"
urlencoding = "2.1.3"
utoipa = "5.4.0"

# If this breaks shit, blame this lad on stackoverflow https://stackoverflow.com/a/54842093
[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"
strip = true
